# distributed-computing-labs

./: .gitignore  README.md
pa1/: CMakeLists.txt  child_operations.c  constants.h  general_actions.c  ipc.c  log.c  log.h  main.c  parent_operations.c  pipe_operations.c  pipe_operations.h
pa2/: CMakeLists.txt  banking.c  child_operations.c  child_operations.h  constants.h  general_actions.c  ipc.c  lamport_logical_time.c  lamport_logical_time.h  main.c  parent_operations.c
pa4/: CMakeLists.txt  child_operations.c  child_operations.h  log.c  main.c  parent_operations.c
pa6/: CMakeLists.txt  README.md  child_operations.c  child_operations.h  ipc.c  log.c  main.c  parent_operations.c
